temp fixes for table layout shifting. reduced font-size for table for mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size:11px;
 }
 
 
@@ -156,6 +157,7 @@
     display: flex;
     flex-direction: column;
     width: 70%;
+    font-size:16px;
     /* max-width: 60%; */
     /* justify-content: center; */
     /* margin:20px; */
